...
    <string name="txt_not_created_acc_yet">Belum membuat akun?</string>
    <string name="txt_register">Daftar</string>
    <string name="desc_login_clip_art">Login Clip Art</string>
    <string name="command_register">Masukkan nama email, dan password yang akan anda gunakan</string>
    <string name="command_login">Silahkan isi Email dan Password untuk melanjutkan</string>
    <string name="hint_name">Nama</string>
    <string name="hint_new_password">Password Baru</string>
    <string name="warn_txt_minimum">Password Min. 7 Karakter</string>
    <string name="err_login_empty">Email dan Password tidak boleh Kosong</string>
    <string name="err_register_empty">Nama, Email dan Password tidak boleh Kosong</string>
    <string name="err_email_not_valid">Email tidak Valid!</string>
    <string name="msg_success_register">Berhasil daftar! Silahkan Login</string>
    <string name="err_load_list">Gagal memuat data.</string>
    <string name="txt_reload">Muat ulang</string>
    <string name="warn_logout">Yakin ingin Log Out?</string>
    <string name="txt_cancel">Batal</string>
    <string name="desc_image_story">Image Story</string>
    <string name="command_add_from_gallery">+\nTambahkan gambar</string>
...
